--- a/frontend/src/Pages/CSS/LoginSignup.css
+++ b/frontend/src/Pages/CSS/LoginSignup.css
@@ -11,6 +11,18 @@
     font-size: 16px;
     transition: box-shadow 0.3 ease;
 }
+.response{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.3s ease-in;
+    background-color: #4a90e2;
+    color: white;
+}
+
 .login-signUp:hover{
     box-shadow: 0 8px 20px rgba(0,0,0,0.25);
 }
@@ -55,9 +67,9 @@
     height: 70%;
     justify-content: space-around;
     align-items: center;
-   
+   /* margin-top: 10px; */
     opacity: 0;
-    transition: opacity 0.4s ease; /* Smooth transition for opacity */
+    transition: opacity 0.2s ease; /* Smooth transition for opacity */
 }
 
 .main-log-sig-container.show {
@@ -75,6 +87,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 30px;
+    margin-top: -70px;
 }
 
 .inp-log-sig {
