--- a/frontend/src/Components/CSS/Navbar.css
+++ b/frontend/src/Components/CSS/Navbar.css
@@ -1,39 +1,58 @@
-.navbar{
+.navbar {
     display: grid;
-    grid-template-columns: 0.4fr 1fr 0.5fr;
+    grid-template-columns: 0.6fr 1fr 0.5fr;
     border: 2px solid black;
     background-color: rgb(37, 37, 37);
     color: white;
 
+
 }
-.abc-nav{
+.navbar-user-name {
+    text-align: center;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-around;
+}
+.navbar-user-name p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: green;
+}
+.abc-nav {
     color: white;
     font-size: 20px;
     text-decoration: none;
 }
-.left{
-    /* border: 2px solid red; */
+
+.left {
     text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 0.5fr;
 }
 
-.center{
+.center {
     border: 2px solid rgb(192, 159, 159);
 }
-.nav-ul{
+
+.nav-ul {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     font-size: 20px;
     list-style: none;
 }
-.navlink{
+
+.navlink {
     color: white;
     text-decoration: none;
 }
-.nav-li Link{
+
+.nav-li Link {
     list-style: none;
 }
-.selecnav{
+
+.selecnav {
     background-color: rgb(37, 37, 37);
     color: white;
     width: 100px;
@@ -42,24 +61,31 @@
     border: 2px solid rgb(12, 10, 10);
     margin-left: 10px;
 }
-.nav-li{
+
+.nav-li {
     list-style: none;
     cursor: pointer;
 }
-.right{
+
+.right {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     /* border: 2px solid red; */
 }
-.right button,i,p{
+
+.right button,
+i,
+p {
     cursor: pointer;
 }
-.right button{
+
+.right button {
     height: 30px;
     border-radius: 5px;
 }
-.circcc{
+
+.circcc {
     width: 17px;
     height: 17px;
     background-color: red;
