--- a/frontend/src/Components/User/CSS/AboutRestaurant.css
+++ b/frontend/src/Components/User/CSS/AboutRestaurant.css
@@ -1,7 +1,7 @@
 .about-restaurant {
     height: 95vh;
     width: 99vw;
-    background-image: url('../../Assets/food1.webp');
+    background-image: url('../../../Assets/food1.webp');
     background-repeat: no-repeat;
     background-size: cover;
     cursor: default;
