--- a/frontend/src/Components/User/CSS/Item.css
+++ b/frontend/src/Components/User/CSS/Item.css
@@ -2,6 +2,7 @@
     /* border: 2px solid red; */
     width: 300px;
     height: 350px;
+    display: grid;
     display: flex;
     border-radius: 10px;
     flex-direction: column;
@@ -38,6 +39,9 @@
     text-align: center;
     font-size: 20px;
     font-weight: bold;
+}
+.show-message-item{
+
 }
 .Item button{
     /* border: 2px solid red; */
