--- a/frontend/src/Components/User/CSS/Navbar.css
+++ b/frontend/src/Components/User/CSS/Navbar.css
@@ -14,6 +14,9 @@
 .left{
     /* border: 2px solid red; */
     text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 0.5fr;
+    /* border: 2px solid wheat; */
 }
 
 .center{
